--- a/package.json
+++ b/package.json
@@ -18,7 +18,8 @@
 		"react": "18.2.0",
 		"react-dom": "18.2.0",
 		"react-router-dom": "^6.22.3",
-		"uuidv4": "^6.2.13"
+		"uuidv4": "^6.2.13",
+		"yarn": "^1.22.22"
 	},
 	"devDependencies": {
 		"@ianvs/prettier-plugin-sort-imports": "^3.7.1",
